# SimuOrg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BACKEND_STATUS_README.md  Dockerfile  LLM_CUSTOM_POLICY_DESIGN.md  LLM_POLICY_GENERATION2.md  LLM_POLICY_PIPELINE.md  README.md  ROADMAP.md  SimuOrg_Documentation.html  WEEKLY_PROGRESS_REPORT.md  backend_all_in_one.md  backend_working.md  backend_working_documentation.md  create_test_datasets.py  docker-compose.yml  fix_colors.py  implementation_plan.md  ml_deep_dive  project_report.md  pylint_results.txt  pyproject.toml  pytest.ini  requirements.txt  simuorg_progress_report.md  test_graph.py  test_policies.py
.github/workflows/: cd.yml  ci.yml
backend/: config.py  database.py  main.py  models.py  pytest.ini  quality_checker.py  schema.py  upload.py
backend/api/: deps.py  llm_routes.py  ml_routes.py  sim_routes.py  upload_routes.py
backend/data/: SimuOrg_Master_Dataset.csv
backend/db/: database.py  models.py
backend/ml/: attrition_model.py  burnout_estimator.py  calibration.py  explain.py  productivity_decay.py  train.py
backend/scripts/: pinecone_seeder.py
backend/services/: cleaning_report.py  orchestrator.py  report_service.py  simulation_service.py
backend/simulation/: agent.py  behavior_engine.py  engine.py  graph_logic.py  monte_carlo.py  org_graph.py  policies.py  (+1 more)
frontend/: index.html  package-lock.json  package.json
scripts/: dataset_report.txt  ibm_mgr_report.txt  ibm_mgr_report2.txt  inspect_datasets.py  inspect_ibm_mgr.py  test_xai.py
test_datasets/: generate_extreme_datasets.py
(+62 files in other folders)
